deployments/postgresql/postgresql-master-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql-master
  namespace: ecommerce
  labels:
    app: postgresql
    role: master
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgresql
      role: master
  template:
    metadata:
      labels:
        app: postgresql
        role: master
    spec:
      containers:
        - name: postgresql
          image: bitnami/postgresql
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgresql-master-data
              mountPath: /bitnami/postgresql
      volumes:
        - name: postgresql-master-data
          persistentVolumeClaim:
            claimName: postgresql-master-pvc
