deployments/postgresql/postgresql-slave-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql-slave
  namespace: ecommerce
  labels:
    app: postgresql
    role: slave
spec:
  replicas: 2
  selector:
    matchLabels:
      app: postgresql
      role: slave
  template:
    metadata:
      labels:
        app: postgresql
        role: slave
    spec:
      securityContext:
        fsGroup: 1001
      containers:
        - name: postgresql-slave
          image: bitnami/postgresql
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgresql-slave-data
              mountPath: /bitnami/postgresql
      volumes:
        - name: postgresql-slave-data
          emptyDir: {}
