deployments/postgresql/haproxy-service.yml
apiVersion: v1
kind: Service
metadata:
  name: haproxy-service
  namespace: ecommerce
spec:
  ports:
    - protocol: TCP
      port: 5434
      targetPort: 5434
  selector:
    app: haproxy-deployment
