deployments/postgresql/postgresql-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgresql-master
  namespace: ecommerce
  labels:
    app: postgresql
    role: master
spec:
  ports:
    - port: 5432
  selector:
    app: postgresql
    role: master

---
apiVersion: v1
kind: Service
metadata:
  name: postgresql-slave
  namespace: ecommerce
  labels:
    app: postgresql
    role: slave
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: postgresql
    role: slave
