deployments/postgresql/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: postgresql-ingress
  namespace: ecommerce
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: your-domain.com
      http:
        paths:
          - path: /postgres
            pathType: Prefix
            backend:
              service:
                name: postgresql-master
                port:
                  number: 5432
